--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO="mongodb+srv://mariyambi:mariyambi@mern-blog.vo77c.mongodb.net/mern-blog?retryWrites=true&w=majority&appName=mern-blog"
+JWT_SECRET ="mariyambi"
